# click-app-template-demo

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
click_app_template_demo/: cli.py
tests/: test_click_app_template_demo.py
