[project]
name = "click-app-template-demo"
version = "0.1"
description = "Demonstrating https://github.com/simonw/click-app"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/click-app-template-demo"
Changelog = "https://github.com/simonw/click-app-template-demo/releases"
Issues = "https://github.com/simonw/click-app-template-demo/issues"
CI = "https://github.com/simonw/click-app-template-demo/actions"

[project.scripts]
click-app-template-demo = "click_app_template_demo.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
